<resources>
    <string name="app_name" translatable="false">Notepad</string>
    <string name="extra_intent_uri_file" translatable="false">uriFile</string>
    <string name="mime_type" translatable="false">text/*</string>
    <string name="url_web_app" translatable="false">https://marzanedev.blogspot.com/p/notepad.html</string>

    <!-- default new file name -->
    <string name="default_title">newFile.txt</string>

    <!-- time format -->
    <string name="date_format">yyyy/MM/dd</string>
    <string name="time_format" translatable="false">HH:mm</string>

    <!-- main message when recent notes history is empty -->
    <string name="list_empty">Press + to create a new file, or open an existing file</string>

    <!-- action bar options -->
    <string name="menu_clear_list">clear list</string>
    <string name="menu_close_app">close app</string>
    <string name="menu_open_file">open</string>
    <string name="menu_save_as">save as</string>
    <string name="menu_new_file">new</string>
    <string name="menu_save_file">save</string>
    <string name="menu_file_info">info</string>
    <string name="menu_settings">settings</string>
    <string name="menu_submenu">More actions</string>
    <string name="menu_cut">Cut</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_select">Select</string>
    <string name="menu_selectAll">Select all</string>

    <!-- dialog messages -->
    <string name="dialog_close_app">Unsaved changes will be lost. \nClose application?</string>
    <string name="dialog_open_file">Unsaved changes will be lost. \nOpen file?</string>
    <string name="dialog_new_file">Unsaved changes will be lost. \nCreate a new file?</string>
    <string name="dialog_clear_list">Are you sure you want to clear recent files history?</string>
    <string name="dialog_close_file">Unsaved changes will be lost. \nClose file?</string>
    <string name="dialog_remove_from_list">Are you sure you want to remove this file from the list? You can reopen it at any time:</string>
    <string name="dialog_delete_file">Are you sure you want to delete this file forever? This action cannot be undone:</string>
    <string name="dialog_error_read_file">Could not read file</string>

    <string name="dialog_option_back">back</string>
    <string name="dialog_option_edit">edit</string>
    <string name="dialog_option_info">info</string>
    <string name="dialog_option_remove_from_list">remove from list</string>
    <string name="dialog_option_delete_file">delete</string>

    <!-- value titles in the file description -->
    <string name="file">File</string>
    <string name="location">Location</string>

    <!-- toast messages -->
    <string name="deleted_file_ok">file deleted successfully</string>
    <string name="deleted_file_error">file could not be deleted</string>
    <string name="copy_to_clipboard">copied to clipboard</string>
    <string name="file_saved">file saved</string>
    <string name="file_not_saved">file could not be saved</string>
    <string name="opening_file">opening file</string>


    <!-- ******** -->
    <!-- SETTINGS -->
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="editor_header">Editor</string>
    <string name="about_title">About</string>

    <!-- Messages Preferences -->
    <string name="language_title">Language</string>
    <string name="fontSize_title">Font size</string>
    <string name="autosave_title">Autosave</string>
    <string name="show_toolbar_title">Show toolbar</string>
    <string name="version_title">Version</string>

    <!-- setting descriptions -->
    <string name="autosave_description">Automatically saves every change made to the text</string>
    <string name="show_toolbar_description">Show text editing tools at the bottom of the screen</string>
    <string name="about_description">App description</string>

    <!-- setting properties -->
    <string name="language_setting" translatable="false">language</string>
    <string name="font_size_setting" translatable="false">fontSize</string>
    <string name="autosave_setting" translatable="false">autosave</string>
    <string name="show_toolbar_setting" translatable="false">showtoolbar</string>
    <string name="app_version_setting" translatable="false">appVersion</string>
    <string name="about_setting" translatable="false">about</string>

    <!-- message when user grants or denies storage permission -->
    <string name="permission_storage_granted">Storage Permissions Granted</string>
    <string name="permission_storage_denied">Permission denied: Changes cannot be saved</string>
    <string name="permission_storage_denied_main">Permission denied: Cannot edit or delete files</string>


</resources>