<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/general_header">

<!--
        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />
-->
        <ListPreference
            app:key="@string/language_setting"
            app:defaultValue="default"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

        <PreferenceCategory app:title="@string/editor_header">
<!--
            <SwitchPreferenceCompat
                app:key="sync"
                app:title="@string/sync_title" />

            <SwitchPreferenceCompat
                app:dependency="sync"
                app:key="attachment"
                app:summaryOff="@string/attachment_summary_off"
                app:summaryOn="@string/attachment_summary_on"
                app:title="@string/attachment_title" />
-->
            <SeekBarPreference
                app:title="@string/fontSize_title"
                app:key="@string/font_size_setting"
                app:defaultValue="17"
                android:max="40"
                app:min="10"
                />

    </PreferenceCategory>


</PreferenceScreen>