<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/open_file"
        android:icon="@drawable/open_folder"
        android:title="@string/menu_open_file"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/new_file"
        android:icon="@drawable/file_add"
        android:title="@string/menu_new_file"
        app:showAsAction="ifRoom"/>

    <!-- overflow -->
    <item android:id="@+id/clear_list"
        android:title="@string/menu_clear_list"
        android:icon="@drawable/delete"
        app:showAsAction="never"/>

    <item android:id="@+id/close_app"
        android:title="@string/menu_close_app"
        android:icon="@drawable/close_app"
        app:showAsAction="never"/>

</menu>